// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Tabs Controlled behaviour 1`] = `
.c4 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid transparent;
}

.c7 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid #0046FF;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 24px;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  margin-bottom: -1px;
}

<span
  className="c0"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>
  <div>
    <ul
      className="c1 c2 c3"
    >
      <li
        className="c4"
        role="presentation"
      >
        <span
          className="c5"
        >
          <button
            aria-selected={true}
            className="c6"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c5"
              >
                One
              </span>
            </div>
          </button>
        </span>
      </li>
      <li
        className="c4"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            aria-selected={false}
            className="c6"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <div
              className="c8"
            >
              <span
                className="c0"
              >
                Two
              </span>
            </div>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c9"
    />
    <div>
      <section
        aria-labelledby="tabs-tab-0"
        hidden={false}
        id="tabs-tabpanel-0"
        role="tabpanel"
      >
        Ones children
      </section>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | Tabs Default 1`] = `
.c4 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid transparent;
}

.c7 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid #0046FF;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 24px;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2 {
  margin-bottom: -1px;
}

<span
  className="c0"
>
  <div>
    <ul
      className="c1 c2 c3"
    >
      <li
        className="c4"
        role="presentation"
      >
        <span
          className="c5"
        >
          <button
            aria-selected={true}
            className="c6"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c5"
              >
                One
              </span>
            </div>
          </button>
        </span>
      </li>
      <li
        className="c4"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            aria-selected={false}
            className="c6"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <div
              className="c8"
            >
              <span
                className="c0"
              >
                <div>
                  Node as well
                  <span
                    aria-label="goodjob"
                    role="img"
                  >
                    👍
                  </span>
                </div>
              </span>
            </div>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c9"
    />
    <div>
      <section
        aria-labelledby="tabs-tab-0"
        hidden={false}
        id="tabs-tabpanel-0"
        role="tabpanel"
      >
        Ones children
      </section>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | Tabs With conditionally hidden tab 1`] = `
.c5 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c4 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c7 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid transparent;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  margin-bottom: -1px;
}

.c1 {
  padding: 0 20px;
}

<span
  className="c0"
>
  <div>
    <ul
      className="c1 c2 c3 c4"
    >
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            aria-selected={false}
            className="c6"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c0"
              >
                two
              </span>
            </div>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c8"
    />
    <div />
  </div>
</span>
`;

exports[`Storyshots Molecules | Tabs With custom styling (like spacing) 1`] = `
.c5 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c4 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c10 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c9 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid transparent;
}

.c8 {
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  padding-bottom: 4px;
  color: #282823;
  border-bottom: 2px solid #0046FF;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 24px;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: inline-block;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  margin-bottom: -1px;
}

.c11 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 16px;
}

.c1 {
  padding: 0 20px;
}

<span
  className="c0"
>
  <div>
    <ul
      className="c1 c2 c3 c4"
    >
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c6"
        >
          <button
            aria-selected={true}
            className="c7"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <div
              className="c8"
            >
              <span
                className="c6"
              >
                One
              </span>
            </div>
          </button>
        </span>
      </li>
      <li
        className="c5"
        role="presentation"
      >
        <span
          className="c0"
        >
          <button
            aria-selected={false}
            className="c7"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <div
              className="c9"
            >
              <span
                className="c0"
              >
                two
              </span>
            </div>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="c10"
    />
    <div>
      <section
        aria-labelledby="tabs-tab-0"
        hidden={false}
        id="tabs-tabpanel-0"
        role="tabpanel"
      >
        <div
          className="c11"
        >
          Ones children
        </div>
      </section>
    </div>
  </div>
</span>
`;
